// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Actualizar cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "11-06-23",
      "hora": "10:40",
      "id": 1686540398451,
      "mascota": "Kira",
      "propietario": "Mario",
      "sintomas": "Duerme mucho",
      "telefono": "111222",
    },
  ],
}
`;

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "11-06-23",
      "hora": "10:40",
      "id": 1686540398451,
      "mascota": "Frodo",
      "propietario": "Mario",
      "sintomas": "Duerme mucho",
      "telefono": "111222",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliiminar cita 1`] = `
Citas {
  "citas": [],
}
`;
